namespaces/live.cloud-platform.service.justice.gov.uk/justice-gov-uk-demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: justice-gov-uk-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "demo"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-intranet"
    cloud-platform.justice.gov.uk/application: "justice-gov-uk"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: central-digital-product-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/justice-gov-uk.git"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: ""
